# Maher_

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  samples.txt
.github/workflows/: ci.yml
adapters/llm/: base.py  hf.py  ollama.py
apps/cli/: main.py
configs/: base.yaml  routing.yaml
configs/profiles/: lab.yaml  org-MIN.yaml
configs/shots/: email_summary_MIN.yaml
core/config/: loader.py  routing.py
core/pipelines/: email_summary.py
core/ports/: llm.py
core/prompting/: renderer.py
data/org/MIN/: style.yaml  vocab.yaml
deploy/docker/: Dockerfile.mono  docker-compose.lab.yml
maher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
promptpacks/email_summary/: system.md  user.md
tests/: test_smoke.py
